styles.css
body {
    font-family: Arial, Helvetica, sans-serif;
}

header {
    background-color: slategrey;
}

main {
    text-align: center;
    color: #666;
}

img#profile-picture {
    border-radius: 50%;
    max-height: 20vh;
}

h1.title {
    color: #000;
    font-weight: normal;
    margin-bottom: 0;
}

h2.subtitle {
    font-size: 1.2em;
    font-weight: normal;
    margin-top: 0;
}

h3.section-title {
    color: #000;
    font-weight: normal;
    margin-top: 2rem;
    margin-bottom: .6rem;
}

p {
    line-height: 1.5rem;
    margin-top: 0;
}

.badge {
    border: .05rem solid grey;
    border-radius: .6rem;
    color: #000;
    line-height: 2em;
    margin: .2rem;
    padding: .3rem;
    white-space: nowrap;
}

.social-icon {
    background-size: cover;
    cursor: pointer;
    display: inline-block;
    margin: .5rem;
    height: 3rem;
    width: 3rem;
}

.social-icon.linkedin {
    background-image: url(assets/linkedin.svg);
}

.social-icon.twitter {
    background-image: url(assets/twitter.svg);
}

.button {
    border: .06rem solid #0072a3;
    border-radius: .4rem;
    color: #0072a3;
    cursor: pointer;
    font-size: .9rem;
    padding: .6rem;
    text-transform: uppercase;
    white-space: nowrap;
}

.button:hover {
    background-color: aliceblue;
}

a {
    text-decoration: none;
}

.card {
    border: .15rem solid lightgrey;
    border-radius: 10px;
    box-shadow: 10px 10px 5px lightgray;
    margin: 5vh;
    padding: 10vh;
}

@media screen and (min-width: 800px) {
    .card {
        margin: 10vh;
        padding: 10vh 20vh;
    }
}

@media screen and (min-width: 1200px) {
    .card {
        margin: 10vh 30vh;
        padding: 10vh 25vh;
    }
}

